--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Udta Parinda Taushif Darinda</title>
+  <title>🕊Udta Parinda Taushif Darinda🤣</title>
   <link rel="icon" href="icon.png" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1 class="game-title">Udta Parinda Taushif Darinda</h1>
+  <h1 class="game-title">🕊Udta Parinda Taushif Darinda🤣</h1>
 
   <div class="game-container">
     <canvas id="gameCanvas" width="400" height="600"></canvas>
@@ -25,3 +25,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
